--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=test_be_laravel
 DB_USERNAME=root
+DB_ROOT_PASSWORD=
 DB_PASSWORD=
 
 SESSION_DRIVER=database
